# peteralbus_nonebot

./: .env  .gitignore  README.md  pyproject.toml  start.sh
my-bot/plugins/deepseek_chat/: __init__.py  config.py  handler.py
my-bot/plugins/peteralbus_wife/: __init__.py  config.json  config.py  handler.py  jm_downloader.py
